# agentic-doc-intel

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  benchmarks.md  index.html
examples/: quickstart.py  sample_output.json
src/agentic_doc_intel/: __init__.py  decision.py  extraction.py  schemas.py  validation.py
