[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-doc-intel"
version = "0.1.0"
description = "VLM document extraction with deterministic validation and confidence routing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ateeb Taseer" }]
keywords = ["document-ai", "vlm", "ocr", "bedrock", "extraction", "invoice", "purchase-order"]
dependencies = [
    "boto3>=1.34",
    "pymupdf>=1.24",
    "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/Cardano-max/agentic-doc-intel"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
